--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ ul {
   text-decoration: none;
   list-style: none;
 }
+.page-header {
+  border-bottom: 1px solid #ececec;
+}
 .nav {
   display: flex;
 }
@@ -261,7 +264,16 @@ ul {
 .page-footer {
   background-color: var(--hero-footer-color);
 }
+
+.footer-content {
+  display: block;
+}
+
 .footer-logo {
+  display: flex;
+  padding-top: 60px;
+  padding-bottom: 20px;
+
   font-family: 'Raleway', sans-serif;
   color: var(--header-color);
   font-weight: 700;
@@ -286,6 +298,10 @@ ul {
 .footer-iteam {
   font-style: normal;
 }
+.footer-items .footer-iteam:not(:last-child) {
+  margin-bottom: 9px;
+}
+
 .footer-iteam > a:hover,
 .footer-iteam > a:focus {
   color: var(--accent-color);
@@ -294,6 +310,8 @@ ul {
 
 /* filters-button */
 .filters-button {
+  padding: 6px 25px;
+
   font-family: 'Roboto', sans-serif;
   background-color: var(--secondary-main-color);
   text-align: center;
@@ -302,6 +320,16 @@ ul {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+}
+.filters {
+  display: flex;
+  padding-top: 100px;
+  padding-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.filters .filters-item:not(:last-child) {
+  margin-right: 8px;
 }
 .filters-button:hover,
 .filters-button:focus {
@@ -315,9 +343,25 @@ ul {
 
 /* project */
 
-.projeckts-iteam {
+.project {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.projects-iteam {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+
   background-color: var(--header-color);
   border: 1px solid #eeeeee;
+}
+.projects-iteam:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.projects-iteam:nth-child(3n) {
+  margin-right: 0;
 }
 .project-card {
   font-weight: 700;
