--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
   color: var(--primary-text-color);
   font-size: 14px;
 }
+
 .conteiner {
   display: flex;
   flex-wrap: wrap;
@@ -25,7 +26,7 @@ body {
   padding-left: 15px;
   padding-right: 15px;
   margin: 0 auto;
-  outline: 2px solid rebeccapurple;
+  /* outline: 3px solid skyblue; */
 }
 h1,
 h2,
@@ -35,6 +36,20 @@ p,
 ul {
   margin: 0;
   padding-inline-start: 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 /* header css */
@@ -52,9 +67,9 @@ ul {
   display: flex;
 }
 .nav-logo {
-  margin-top: 24px;
+  padding-top: 24px;
+  padding-bottom: 25px;
   margin-right: 93px;
-  margin-bottom: 25px;
 
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -110,6 +125,8 @@ ul {
 }
 .contact-link {
   color: var(--content-text-color);
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .contact-link:hover,
 .contact-link:focus {
@@ -231,6 +248,9 @@ ul {
 .team-item {
   text-align: center;
 }
+.team-item img {
+  display: block;
+}
 .title-name {
   margin-top: 30px;
   margin-bottom: 10px;
@@ -284,6 +304,11 @@ ul {
 .footer-logo:focus {
   text-decoration: underline var(--accent-color);
 }
+
+.footer-items {
+  padding-bottom: 60px;
+}
+
 .footer-street {
   color: var(--header-color);
   font-size: 14px;
@@ -346,7 +371,8 @@ ul {
 .project {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+  padding-bottom: 94px;
 }
 
 .projects-iteam {
@@ -369,7 +395,16 @@ ul {
   line-height: 2;
   letter-spacing: 0.06em;
 }
+
+.projects-iteam img {
+  display: block;
+}
 .project-title {
+  margin-top: 20px;
+  margin-bottom: 4px;
+  margin-left: 24px;
+  margin-right: 24px;
+
   color: var(--primary-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -377,6 +412,10 @@ ul {
   letter-spacing: 0.06em;
 }
 .project-text {
+  margin-left: 24px;
+  margin-right: 24px;
+  margin-bottom: 20px;
+
   color: var(--content-text-color);
   font-size: 16px;
   line-height: 1.87;
