--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,11 @@ ul {
 }
 /* portfolio html */
 
+.section-portfolio {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /* filters-button */
 .filters-button {
   padding: 6px 25px;
@@ -380,14 +385,12 @@ ul {
 }
 .filters {
   display: flex;
-  padding-top: 100px;
+  gap: 8px;
   padding-bottom: 50px;
   margin-left: auto;
   margin-right: auto;
 }
-.filters .filters-item:not(:last-child) {
-  margin-right: 8px;
-}
+
 .filters-button:hover,
 .filters-button:focus {
   cursor: pointer;
@@ -403,24 +406,15 @@ ul {
 .project {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  padding-bottom: 94px;
+  gap: 30px;
 }
-
 .projects-iteam {
-  width: 370px;
-  margin-right: 30px;
-  margin-bottom: 30px;
-
+  flex-basis: calc((100% - 30px * 6) / 9);
+}
+.projects-iteam {
   background-color: var(--header-color);
-  border: 1px solid #eeeeee;
 }
-.projects-iteam:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-.projects-iteam:nth-child(3n) {
-  margin-right: 0;
-}
+
 .project-card {
   font-weight: 700;
   font-size: 18px;
@@ -431,11 +425,19 @@ ul {
 .projects-iteam img {
   display: block;
 }
+
+.project-content {
+  /* padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 24px;
+  padding-left: 24px; */
+  display: flex;
+  padding: 20px 24px;
+
+  border: 1px solid #eeeeee;
+}
 .project-title {
-  margin-top: 20px;
   margin-bottom: 4px;
-  margin-left: 24px;
-  margin-right: 24px;
 
   color: var(--primary-text-color);
   font-weight: 700;
@@ -444,11 +446,8 @@ ul {
   letter-spacing: 0.06em;
 }
 .project-text {
-  margin-left: 24px;
-  margin-right: 24px;
-  margin-bottom: 20px;
-
   color: var(--content-text-color);
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
 }
